--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.17",
+    "@zenfs/core": "^2.0.0",
+    "@zenfs/dom": "^1.1.6",
     "ai": "^4.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.485.0",
     "mark.js": "^8.11.1",
     "nanoid": "^5.1.5",
@@ -54,6 +57,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jszip": "^3.4.0",
     "@types/mark.js": "^8.11.12",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
