--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.17",
+    "@types/lodash-es": "^4.17.12",
     "@zenfs/core": "^2.0.0",
     "@zenfs/dom": "^1.1.6",
     "ai": "^4.2.9",
@@ -37,6 +38,7 @@
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "jszip": "^3.10.1",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.485.0",
     "mark.js": "^8.11.1",
     "nanoid": "^5.1.5",
