--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "coverage": "DEBUG_PRINT_LIMIT=10000 vitest run --coverage"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.11",
     "@ai-sdk/openai": "^1.3.5",
     "@ai-sdk/openai-compatible": "^0.2.4",
     "@ai-sdk/react": "^1.2.4",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -44,13 +46,14 @@
     "mitt": "^3.0.1",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "ollama-ai-provider": "^1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.2",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
