--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@ai-sdk/react": "^1.2.4",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -37,6 +38,7 @@
     "ai": "^4.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "jszip": "^3.10.1",
