--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "test": "DEBUG_PRINT_LIMIT=10000 vitest",
     "test:ui": "DEBUG_PRINT_LIMIT=10000 vitest --ui",
-    "coverage": "DEBUG_PRINT_LIMIT=10000 vitest run --coverage"
+    "coverage": "DEBUG_PRINT_LIMIT=10000 vitest run --coverage",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.11",
@@ -77,6 +78,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "typescript": "~5.7.2",
