--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@ai-sdk/openai": "^1.3.5",
     "@ai-sdk/openai-compatible": "^0.2.4",
     "@ai-sdk/react": "^1.2.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
