--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-context-menu": "^2.2.10",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.7",
@@ -89,6 +90,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vitest": "^3.1.1"
   }
 }
