--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
+    "immer": "^10.1.1",
     "isomorphic-git": "^1.30.1",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
