--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
+    "highlight.js": "^11.11.1",
     "immer": "^10.1.1",
     "isomorphic-git": "^1.30.1",
     "jszip": "^3.10.1",
@@ -62,6 +63,7 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "remarkable": "^2.0.1",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
@@ -80,6 +82,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/remarkable": "^2.0.8",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.1.1",
