--- a/package.json
+++ b/package.json
@@ -67,6 +67,10 @@
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "remarkable": "^2.0.1",
+    "remove": "^0.1.5",
+    "shiki": "^3.3.0",
+    "shiki-es": "^0.14.0",
+    "shiki-stream": "^0.1.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
