--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.485.0",
     "mark.js": "^8.11.1",
+    "markdown-it": "^14.1.0",
     "mitt": "^3.0.1",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "ollama-ai-provider": "^1.2.0",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
@@ -85,7 +87,9 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jszip": "^3.4.0",
     "@types/mark.js": "^8.11.12",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.14",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
