--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:ui": "DEBUG_PRINT_LIMIT=10000 vitest --ui",
     "coverage": "DEBUG_PRINT_LIMIT=10000 vitest run --coverage",
     "deploy": "gh-pages -d dist --no-history --dotfiles --remove \".proompts/**/*\"",
-    "to2web": "npm run build && npm run deploy"
+    "to2web": "npm run build && bin/releaser && npm run deploy"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.11",
