--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-context-menu": "^2.2.12",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
