[vibe] better onboarding

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-context-menu": "^2.2.12",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-hover-card": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.4",
@@ -61,6 +62,7 @@
     "mark.js": "^8.11.1",
     "markdown-it": "^14.1.0",
     "mitt": "^3.0.1",
+    "motion": "^12.9.7",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "ollama-ai-provider": "^1.2.0",
