--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/react-form": "^1.11.1",
     "@tanstack/react-virtual": "^3.13.8",
     "@types/lodash-es": "^4.17.12",
     "@zenfs/core": "^2.0.0",
@@ -82,7 +83,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.3",
+    "zod": "^3.24.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
