--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lucide-react": "^0.485.0",
     "mark.js": "^8.11.1",
     "markdown-it": "^14.1.0",
+    "mermaid-isomorphic": "^3.0.4",
     "mitt": "^3.0.1",
     "motion": "^12.9.7",
     "nanoid": "^5.1.5",
