--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
-    "tw-animate-css": "^1.2.5",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.4",
     "zod": "^3.24.4",
     "zustand": "^5.0.3"
   },
