--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:ui": "DEBUG_PRINT_LIMIT=10000 vitest --ui",
     "coverage": "DEBUG_PRINT_LIMIT=10000 vitest run --coverage",
     "deploy": "gh-pages -d dist --no-history --dotfiles --remove \".proompts/**/*\"",
-    "to2web": "npm run build && bin/releaser && npm run deploy"
+    "to2web": "npm run build && bin/releaser && npm run deploy",
+    "mcp-proxy": "node bin/mcp-bridge.js"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
@@ -21,7 +22,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@openrouter/ai-sdk-provider": "^0.4.6",
+    "@openrouter/ai-sdk-provider": "^0.7.2",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-context-menu": "^2.2.12",
