--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-simple-code-editor": "^0.14.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
