--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "typescript-eslint": "^8.34.0",
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.1.1"
   }
 }
