--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3-hierarchy": "^3.1.2",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "immer": "^10.1.1",
