--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "d3-hierarchy": "^3.1.2",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
+    "html-to-image": "^1.11.13",
     "immer": "^10.1.1",
     "isomorphic-git": "^1.30.1",
     "jszip": "^3.10.1",
