--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.34.0",
     "vite": "^6.2.0",
+    "vite-bundle-analyzer": "^0.23.0",
     "vite-plugin-node-polyfills": "^0.23.0",
     "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.1.1"
