--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "vite --host",
     "build": "export VITE_SYSTEM_PROMPT_FILE=system-prompt.txt && tsc -b && vite build",
+    "build:en": "VITE_APP_LANG=en npm run build",
+    "build:fr": "VITE_APP_LANG=fr npm run build",
+    "build:all": "npm run build:en && npm run build:fr",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "DEBUG_PRINT_LIMIT=10000 vitest",
@@ -15,7 +18,7 @@
     "to2web": "npm run build && bin/releaser && npm run deploy",
     "mcp-proxy": "node bin/mcp-bridge.js",
     "serve": "npm run build && npx http-server dist --port ${LITECHAT_PORT:=5173}",
-    "update":"git pull ${LITECHAT_ORIGIN:=origin} ${LITECHAT_BRANCH:=main} && npm install && npm run serve"
+    "update": "git pull ${LITECHAT_ORIGIN:=origin} ${LITECHAT_BRANCH:=main} && npm install && npm run serve"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
@@ -57,6 +60,7 @@
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "html-to-image": "^1.11.13",
+    "i18next": "^25.2.1",
     "immer": "^10.1.1",
     "isomorphic-git": "^1.30.1",
     "jszip": "^3.10.1",
@@ -73,6 +77,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-i18next": "^15.5.3",
     "react-simple-code-editor": "^0.14.1",
     "recharts": "^3.0.0",
     "sonner": "^2.0.3",
