--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-form": "^1.12.2",
     "@tanstack/react-virtual": "^3.13.8",
+    "@types/cheerio": "^0.22.35",
     "@xyflow/react": "^12.7.0",
     "@zenfs/core": "^2.0.0",
     "@zenfs/dom": "^1.1.6",
     "ai": "^4.3.16",
+    "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
