--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "update": "git pull ${LITECHAT_ORIGIN:=origin} ${LITECHAT_BRANCH:=main} && npm install && npm run serve"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.2.19",
-    "@ai-sdk/openai": "^1.3.22",
-    "@ai-sdk/openai-compatible": "^0.2.14",
+    "@ai-sdk/google": "^2.0.0-beta.10",
+    "@ai-sdk/openai": "^2.0.0-beta.8",
+    "@ai-sdk/openai-compatible": "^1.0.0-beta.5",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@openrouter/ai-sdk-provider": "^0.7.2",
+    "@openrouter/ai-sdk-provider": "^1.0.0-beta.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-context-menu": "^2.2.12",
@@ -53,7 +53,7 @@
     "@xyflow/react": "^12.7.0",
     "@zenfs/core": "^2.0.0",
     "@zenfs/dom": "^1.1.6",
-    "ai": "^4.3.16",
+    "ai": "^5.0.0-beta.19",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -87,7 +87,7 @@
     "tailwindcss": "^4.0.17",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.4",
-    "zod": "^3.25.62",
+    "zod": "^3.25.49",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
