--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "update": "git pull ${LITECHAT_ORIGIN:=origin} ${LITECHAT_BRANCH:=main} && npm install && npm run serve"
   },
   "dependencies": {
-    "@ai-sdk/google": "^2.0.0-beta.10",
-    "@ai-sdk/openai": "^2.0.0-beta.8",
-    "@ai-sdk/openai-compatible": "^1.0.0-beta.5",
+    "@ai-sdk/google": "^2.0.0-beta.19",
+    "@ai-sdk/mistral": "^2.0.0-beta.11",
+    "@ai-sdk/openai": "^2.0.0-beta.16",
+    "@ai-sdk/openai-compatible": "^1.0.0-beta.13",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@openrouter/ai-sdk-provider": "^1.0.0-beta.1",
+    "@openrouter/ai-sdk-provider": "^1.0.0-beta.6",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-context-menu": "^2.2.12",
@@ -53,7 +54,8 @@
     "@xyflow/react": "^12.7.0",
     "@zenfs/core": "^2.3.5",
     "@zenfs/dom": "^1.1.9",
-    "ai": "^5.0.0-beta.19",
+    "add": "^2.0.6",
+    "ai": "^5.0.0-beta.34",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
