--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.0",
+    "@ai-sdk/deepinfra": "^1.0.0",
+    "@ai-sdk/fal": "^1.0.0",
+    "@ai-sdk/fireworks": "^1.0.0",
     "@ai-sdk/google": "^2.0.0-beta.19",
+    "@ai-sdk/luma": "^1.0.0",
     "@ai-sdk/mistral": "^2.0.0-beta.11",
     "@ai-sdk/openai": "^2.0.0-beta.16",
     "@ai-sdk/openai-compatible": "^1.0.0-beta.13",
+    "@ai-sdk/replicate": "^1.0.0",
     "@ai-sdk/xai": "^2.0.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
