--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@ai-sdk/deepinfra": "^1.0.0",
     "@ai-sdk/fal": "^1.0.0",
     "@ai-sdk/fireworks": "^1.0.0",
-    "@ai-sdk/google": "^2.0.0-beta.19",
+    "@ai-sdk/google": "^2.0.0",
     "@ai-sdk/luma": "^1.0.0",
-    "@ai-sdk/mistral": "^2.0.0-beta.11",
-    "@ai-sdk/openai": "^2.0.0-beta.16",
-    "@ai-sdk/openai-compatible": "^1.0.0-beta.13",
+    "@ai-sdk/mistral": "^2.0.0",
+    "@ai-sdk/openai": "^2.0.0",
+    "@ai-sdk/openai-compatible": "^1.0.0",
     "@ai-sdk/replicate": "^1.0.0",
     "@ai-sdk/xai": "^2.0.0",
     "@dnd-kit/core": "^6.3.1",
@@ -61,7 +61,8 @@
     "@xyflow/react": "^12.7.0",
     "@zenfs/core": "^2.3.5",
     "@zenfs/dom": "^1.1.9",
-    "ai": "^5.0.0-beta.34",
+    "add": "^2.0.6",
+    "ai": "^5.0.0",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
