--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "export VITE_SYSTEM_PROMPT_FILE=system-prompt.txt && tsc -b && vite build",
+    "build": "export VITE_SYSTEM_PROMPT_FILE=system-prompt.txt && tsc --noEmit --skipLibCheck && vite build",
     "build:en": "VITE_APP_LANG=en npm run build",
     "build:fr": "VITE_APP_LANG=fr npm run build",
     "build:all": "npm run build:en && npm run build:fr",
@@ -36,6 +36,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@openrouter/ai-sdk-provider": "^1.0.0-beta.6",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-context-menu": "^2.2.12",
@@ -44,18 +45,18 @@
     "@radix-ui/react-hover-card": "^1.1.13",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slider": "^1.3.2",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.0.17",
-    "@tanstack/react-form": "^1.15.2",
+    "@tanstack/react-form": "^1.18.0",
     "@tanstack/react-virtual": "^3.13.8",
     "@types/cheerio": "^1.0.0",
     "@xyflow/react": "^12.7.0",
@@ -85,18 +86,18 @@
     "ollama-ai-provider": "^1.2.0",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.3",
     "react-simple-code-editor": "^0.14.1",
     "recharts": "^3.1.0",
-    "sonner": "^2.0.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.6",
-    "zod": "^3.25.49",
+    "zod": "^3.25.76",
     "zustand": "5.0.3"
   },
   "devDependencies": {
